changed attachment id to service 2

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Main Product Display</title>
   </head>
   <body>
-    <div id='app'>Connected to client</div>
+    <div id='service2'>Connected to client</div>
     <script src='bundle.js'></script>
   </body>
 </html>
