--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8' lang='en'>
     <title>Main Product Display</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id='service2'>Connected to client</div>
